Add topic replication factor change
This change implements the proposal about topic replication factor change.

Signed-off-by: Federico Valeri <fedevaleri@gmail.com>