@@ -12,8 +12,8 @@ import io.strimzi.api.kafka.model.common.Condition;
 import io.strimzi.api.kafka.model.common.ConditionBuilder;
 import io.strimzi.api.kafka.model.topic.KafkaTopic;
 import io.strimzi.api.kafka.model.topic.KafkaTopicBuilder;
+import io.strimzi.api.kafka.model.topic.KafkaTopicStatus;
 import io.strimzi.api.kafka.model.topic.KafkaTopicStatusBuilder;
-import io.strimzi.operator.common.Annotations;
 import io.strimzi.operator.common.Reconciliation;
 import io.strimzi.operator.common.ReconciliationLogger;
 import io.strimzi.operator.common.model.StatusUtils;
@@ -53,32 +53,39 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.ExecutionException;
-import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+import static io.strimzi.operator.topic.v2.TopicOperatorUtil.isManaged;
+import static io.strimzi.operator.topic.v2.TopicOperatorUtil.isPaused;
+import static io.strimzi.operator.topic.v2.TopicOperatorUtil.startOperationTimer;
+import static io.strimzi.operator.topic.v2.TopicOperatorUtil.startReconciliationTimer;
+import static io.strimzi.operator.topic.v2.TopicOperatorUtil.stopOperationTimer;
+import static io.strimzi.operator.topic.v2.TopicOperatorUtil.stopReconciliationTimer;
 import static io.strimzi.operator.topic.v2.TopicOperatorUtil.topicName;
 
 /**
- * A unidirectional operator
+ * A unidirectional operator.
  */
 @SuppressWarnings({"checkstyle:ClassFanOutComplexity", "checkstyle:ClassDataAbstractionCoupling"})
 public class BatchingTopicController {
-
     static final ReconciliationLogger LOGGER = ReconciliationLogger.create(BatchingTopicController.class);
 
     static final String FINALIZER = "strimzi.io/topic-operator";
-    static final String MANAGED = "strimzi.io/managed";
     static final String AUTO_CREATE_TOPICS_ENABLE = "auto.create.topics.enable";
+    static final String MIN_INSYNC_REPLICAS = "min.insync.replicas";
+    
     private static final int BROKER_DEFAULT = -1;
     private final boolean useFinalizer;
     private final boolean enableAdditionalMetrics;
 
     private final Admin admin;
 
+    private final TopicOperatorConfig config;
     private final Map<String, String> selector;
 
     private final KubernetesClient kubeClient;
@@ -88,53 +95,51 @@ public class BatchingTopicController {
 
     private final TopicOperatorMetricsHolder metrics;
     private final String namespace;
+    private final ReplicasChangeClient replicasChangeClient;
 
-    BatchingTopicController(Map<String, String> selector,
+    BatchingTopicController(TopicOperatorConfig config,
+                            Map<String, String> selector,
                             Admin admin,
                             KubernetesClient kubeClient,
-                            boolean useFinalizer,
-                            TopicOperatorMetricsHolder metrics,
-                            String namespace,
-                            boolean enableAdditionalMetrics) throws ExecutionException, InterruptedException {
+                            TopicOperatorMetricsHolder metrics) {
+        this.config = config;
         this.selector = Objects.requireNonNull(selector);
-        this.useFinalizer = useFinalizer;
+        this.useFinalizer = config.useFinalizer();
         this.admin = admin;
-        DescribeClusterResult describeClusterResult = admin.describeCluster();
         // Get the config of some broker and check whether auto topic creation is enabled
-        boolean hasAutoCreateTopics = false;
-        var nodes = describeClusterResult.nodes().get();
-        Map<ConfigResource, KafkaFuture<Map<ConfigResource, Config>>> futures = new HashMap<>();
-        for (var node : nodes) {
-            ConfigResource nodeResource = new ConfigResource(ConfigResource.Type.BROKER, node.idString());
-            futures.put(nodeResource, admin.describeConfigs(Set.of(nodeResource)).all());
-        }
-        for (var entry : futures.entrySet()) {
-            var nodeConfig = entry.getValue().get().get(entry.getKey());
-            var autoCreateTopics = nodeConfig.get(AUTO_CREATE_TOPICS_ENABLE);
-            hasAutoCreateTopics |= "true".equals(autoCreateTopics.value());
-        }
-        if (hasAutoCreateTopics) {
+        Optional<String> autoCreateValue = getClusterConfig(admin, AUTO_CREATE_TOPICS_ENABLE);
+        if (autoCreateValue.isPresent() ? "true".equals(autoCreateValue.get()) : false) {
             LOGGER.warnOp(
                     "It is recommended that " + AUTO_CREATE_TOPICS_ENABLE + " is set to 'false' " +
                     "to avoid races between the operator and Kafka applications auto-creating topics");
         }
         this.kubeClient = kubeClient;
         this.metrics = metrics;
-        this.namespace = namespace;
-        this.enableAdditionalMetrics = enableAdditionalMetrics;
+        this.namespace = config.namespace();
+        this.enableAdditionalMetrics = config.enableAdditionalMetrics();
+        this.replicasChangeClient = new ReplicasChangeClient(config);
     }
 
-    /* test */ static boolean isManaged(KafkaTopic kt) {
-        return kt.getMetadata() == null
-                || kt.getMetadata().getAnnotations() == null
-                || kt.getMetadata().getAnnotations().get(MANAGED) == null
-                || !"false".equals(kt.getMetadata().getAnnotations().get(MANAGED));
+    private static Optional<String> getClusterConfig(Admin admin, String name) {
+        try {
+            DescribeClusterResult describeClusterResult = admin.describeCluster();
+            var nodes = describeClusterResult.nodes().get();
+            Map<ConfigResource, KafkaFuture<Map<ConfigResource, Config>>> futures = new HashMap<>();
+            for (var node : nodes) {
+                ConfigResource nodeResource = new ConfigResource(ConfigResource.Type.BROKER, node.idString());
+                futures.put(nodeResource, admin.describeConfigs(Set.of(nodeResource)).all());
+            }
+            for (var entry : futures.entrySet()) {
+                var nodeConfig = entry.getValue().get().get(entry.getKey());
+                var configEntry = nodeConfig.get(name);
+                return Optional.of(configEntry.value());
+            }
+            return Optional.empty();
+        } catch (Throwable e) {
+            throw new RuntimeException("Failed to get cluster configuration: " + e.getMessage());
+        }
     }
-
-    /* test */ static boolean isPaused(KafkaTopic kt) {
-        return Annotations.isReconciliationPausedWithAnnotation(kt);
-    }
-
+    
     private static boolean isForDeletion(KafkaTopic kt) {
         if (kt.getMetadata().getDeletionTimestamp() != null) {
             var deletionTimestamp = StatusUtils.isoUtcDatetime(kt.getMetadata().getDeletionTimestamp());
@@ -161,10 +166,10 @@ public class BatchingTopicController {
     private KafkaTopic addFinalizer(ReconcilableTopic reconcilableTopic) {
         if (!reconcilableTopic.kt().getMetadata().getFinalizers().contains(FINALIZER)) {
             LOGGER.debugCr(reconcilableTopic.reconciliation(), "Adding finalizer {}", FINALIZER);
-            Timer.Sample timerSample = startOperationTimer();
+            Timer.Sample timerSample = startOperationTimer(enableAdditionalMetrics, metrics);
             KafkaTopic edit = Crds.topicOperation(kubeClient).resource(reconcilableTopic.kt()).edit(old ->
                     new KafkaTopicBuilder(old).editOrNewMetadata().addToFinalizers(FINALIZER).endMetadata().build());
-            stopOperationTimer(timerSample, metrics::addFinalizerTimer);
+            stopOperationTimer(timerSample, metrics::addFinalizerTimer, enableAdditionalMetrics, namespace);
             LOGGER.traceCr(reconcilableTopic.reconciliation(), "Added finalizer {}, resourceVersion now {}", FINALIZER, resourceVersion(edit));
             return edit;
         }
@@ -174,10 +179,10 @@ public class BatchingTopicController {
     private KafkaTopic removeFinalizer(ReconcilableTopic reconcilableTopic) {
         if (reconcilableTopic.kt().getMetadata().getFinalizers().contains(FINALIZER)) {
             LOGGER.debugCr(reconcilableTopic.reconciliation(), "Removing finalizer {}", FINALIZER);
-            Timer.Sample timerSample = startOperationTimer();
+            Timer.Sample timerSample = startOperationTimer(enableAdditionalMetrics, metrics);
             var result = Crds.topicOperation(kubeClient).resource(reconcilableTopic.kt()).edit(old ->
                     new KafkaTopicBuilder(old).editOrNewMetadata().removeFromFinalizers(FINALIZER).endMetadata().build());
-            stopOperationTimer(timerSample, metrics::removeFinalizerTimer);
+            stopOperationTimer(timerSample, metrics::removeFinalizerTimer, enableAdditionalMetrics, namespace);
             LOGGER.traceCr(reconcilableTopic.reconciliation(), "Removed finalizer {}, resourceVersion now {}", FINALIZER, resourceVersion(result));
             return result;
         } else {
@@ -263,10 +268,10 @@ public class BatchingTopicController {
         }).collect(Collectors.toSet());
 
         LOGGER.debugOp("Admin.createTopics({})", newTopics);
-        Timer.Sample timerSample = startOperationTimer();
+        Timer.Sample timerSample = startOperationTimer(enableAdditionalMetrics, metrics);
         CreateTopicsResult ctr = admin.createTopics(newTopics);
         ctr.all().whenComplete((i, e) -> {
-            stopOperationTimer(timerSample, metrics::createTopicsTimer);
+            stopOperationTimer(timerSample, metrics::createTopicsTimer, enableAdditionalMetrics, namespace);
             if (e != null) {
                 LOGGER.traceOp("Admin.createTopics({}) failed with {}", newTopics, String.valueOf(e));
             } else {
@@ -437,7 +442,7 @@ public class BatchingTopicController {
         }
 
         var remainingAfterDeletions = partitionedByDeletion.get(false);
-        remainingAfterDeletions.forEach(this::startReconciliationTimer);
+        remainingAfterDeletions.forEach(rt -> startReconciliationTimer(rt, metrics));
         Map<ReconcilableTopic, Either<TopicOperatorException, Object>> results = new HashMap<>();
 
         var partitionedByManaged = remainingAfterDeletions.stream().collect(Collectors.partitioningBy(reconcilableTopic -> isManaged(reconcilableTopic.kt())));
@@ -464,11 +469,11 @@ public class BatchingTopicController {
         // execute those updates
         var alterConfigsResults = alterConfigs(someAlterConfigs);
         var createPartitionsResults = createPartitions(someCreatePartitions);
-
-        accumulateResults(results, currentStatesOrError, alterConfigsResults, createPartitionsResults);
-
+        var findDifferentRfResults = findDifferentRf(currentStatesOrError);
+        
+        accumulateResults(topics, results, alterConfigsResults, createPartitionsResults, findDifferentRfResults);
         updateStatuses(results);
-        remainingAfterDeletions.forEach(this::stopReconciliationTimer);
+        remainingAfterDeletions.forEach(rt -> stopReconciliationTimer(rt, metrics, namespace));
 
         LOGGER.traceOp("Reconciled batch of {} KafkaTopics", results.size());
     }
@@ -541,18 +546,19 @@ public class BatchingTopicController {
             var reconcilableTopic = entry.getKey();
             var either = entry.getValue();
             if (either.isRight()) {
-                updateStatusOk(reconcilableTopic);
+                updateStatusForSuccess(reconcilableTopic);
             } else {
                 updateStatusForException(reconcilableTopic, either.left());
             }
         });
         LOGGER.traceOp("Updated status of {} KafkaTopics", results.size());
     }
-
-    private void accumulateResults(Map<ReconcilableTopic, Either<TopicOperatorException, Object>> results,
-                                   PartitionedByError<ReconcilableTopic, CurrentState> currentStatesOrError,
+    
+    private void accumulateResults(List<ReconcilableTopic> topics,
+                                   Map<ReconcilableTopic, Either<TopicOperatorException, Object>> results,
                                    PartitionedByError<ReconcilableTopic, Void> alterConfigsResults,
-                                   PartitionedByError<ReconcilableTopic, Void> createPartitionsResults) {
+                                   PartitionedByError<ReconcilableTopic, Void> createPartitionsResults,
+                                   PartitionedByError<ReconcilableTopic, CurrentState> differentRfResults) {
         // add the successes to the results
         alterConfigsResults.ok().forEach(pair -> putResult(results, pair.getKey(), Either.ofRight(null)));
         createPartitionsResults.ok().forEach(pair -> putResult(results, pair.getKey(), Either.ofRight(null)));
@@ -560,23 +566,63 @@ public class BatchingTopicController {
         // add to errors (potentially overwriting some successes, e.g. if configs succeeded but partitions failed)
         alterConfigsResults.errors().forEach(pair -> putResult(results, pair.getKey(), Either.ofLeft(pair.getValue())));
         createPartitionsResults.errors().forEach(pair -> putResult(results, pair.getKey(), Either.ofLeft(pair.getValue())));
-        var apparentlyDifferentRf = currentStatesOrError.ok().filter(pair -> {
-            var reconcilableTopic = pair.getKey();
-            var currentState = pair.getValue();
-            return reconcilableTopic.kt().getSpec().getReplicas() != null
-                && currentState.uniqueReplicationFactor() != reconcilableTopic.kt().getSpec().getReplicas();
-        }).toList();
+        
+        // handle topics with different replication factor value
+        LOGGER.traceOp("Reconciling replicas changes");
+        differentRfResults.errors().forEach(pair -> putResult(results, pair.getKey(), Either.ofLeft(pair.getValue())));
+        if (config.cruiseControlEnabled()) {
+            // request pending changes
+            var changes = differentRfResults.ok().map(Pair::getKey).collect(Collectors.toList());
+            var pending = getReplicasChanges(changes, this::isPendingReplicasChange);
+            checkMinInsyncReplicas(pending);
+            var pendingAndOngoing = replicasChangeClient.requestPendingChanges(pending);
+            pendingAndOngoing.forEach(rt -> putResult(results, rt, Either.ofRight(null)));
+            
+            // check ongoing changes
+            var allOngoing = getReplicasChanges(topics, this::isOngoingReplicasChange);
+            var completedAndFailed = replicasChangeClient.checkOngoingChanges(allOngoing);
+            completedAndFailed.forEach(rt -> putResult(results, rt, Either.ofRight(null)));
+            
+        } else if (!config.cruiseControlEnabled()) {
+            differentRfResults.ok().forEach(pair -> {
+                var reconcilableTopic = pair.getKey();
+                var specPartitions = partitions(reconcilableTopic.kt());
+                var partitions = pair.getValue().partitionsWithDifferentRfThan(specPartitions);
+                putResult(results, reconcilableTopic, Either.ofLeft(new TopicOperatorException.NotSupported(
+                    "Replication factor change not supported, but required for partitions " + partitions)));
+            });
+        }
+    }
 
-        var actuallyDifferentRf = partitionedByError(filterByReassignmentTargetReplicas(apparentlyDifferentRf).stream());
-        actuallyDifferentRf.errors().forEach(pair -> {
-            putResult(results, pair.getKey(), Either.ofLeft(pair.getValue()));
-        });
-        actuallyDifferentRf.ok().forEach(pair -> {
-            var reconcilableTopic = pair.getKey();
-            var specPartitions = partitions(reconcilableTopic.kt());
-            var partitions = pair.getValue().partitionsWithDifferentRfThan(specPartitions);
-            putResult(results, reconcilableTopic, Either.ofLeft(new TopicOperatorException.NotSupported("Replication factor change not supported, but required for partitions " + partitions)));
-        });
+    private List<ReconcilableTopic> getReplicasChanges(List<ReconcilableTopic> reconcilableTopics, Predicate<KafkaTopic> status) {
+        return reconcilableTopics.stream().filter(rt -> status.test(rt.kt())).collect(Collectors.toList());
+    }
+    
+    private boolean isPendingReplicasChange(KafkaTopic kafkaTopic) {
+        return kafkaTopic.getStatus() != null
+            && (kafkaTopic.getStatus().getReplicasChange() == null
+            || (kafkaTopic.getStatus().getReplicasChange().getState().equals("pending") 
+                && kafkaTopic.getStatus().getReplicasChange().getSessionId() == null));
+    }
+
+    private boolean isOngoingReplicasChange(KafkaTopic kafkaTopic) {
+        return kafkaTopic.getStatus() != null
+            && kafkaTopic.getStatus().getReplicasChange() != null
+            && kafkaTopic.getStatus().getReplicasChange().getState().equals("ongoing")
+            && kafkaTopic.getStatus().getReplicasChange().getSessionId() != null;
+    }
+    
+    private void checkMinInsyncReplicas(List<ReconcilableTopic> reconcilableTopics) {
+        Optional<String> clusterMinIsr = getClusterConfig(admin, MIN_INSYNC_REPLICAS);
+        for (ReconcilableTopic reconcilableTopic : reconcilableTopics) {
+            Integer topicMinIsr = (Integer) reconcilableTopic.kt().getSpec().getConfig().get(MIN_INSYNC_REPLICAS);
+            int minIsr = topicMinIsr != null ? topicMinIsr : clusterMinIsr.isPresent() ? Integer.parseInt(clusterMinIsr.get()) : 1;
+            int targetRf = reconcilableTopic.kt().getSpec().getReplicas();
+            if (targetRf < minIsr) {
+                LOGGER.warnCr(reconcilableTopic.reconciliation(),
+                    "The target replication factor ({}) is below the configured {} ({})", targetRf, MIN_INSYNC_REPLICAS, minIsr);
+            }
+        }
     }
 
     private static List<Pair<ReconcilableTopic, Collection<AlterConfigOp>>> configChanges(Map<ReconcilableTopic, Either<TopicOperatorException, Object>> results, PartitionedByError<ReconcilableTopic, CurrentState> currentStatesOrError) {
@@ -629,13 +675,13 @@ public class BatchingTopicController {
 
         Map<TopicPartition, PartitionReassignment> reassignments;
         LOGGER.traceOp("Admin.listPartitionReassignments({})", apparentDifferentRfPartitions);
-        Timer.Sample timerSample = startOperationTimer();
+        Timer.Sample timerSample = startOperationTimer(enableAdditionalMetrics, metrics);
         try {
             reassignments = admin.listPartitionReassignments(apparentDifferentRfPartitions).reassignments().get();
-            stopOperationTimer(timerSample, metrics::listReassignmentsTimer);
+            stopOperationTimer(timerSample, metrics::listReassignmentsTimer, enableAdditionalMetrics, namespace);
             LOGGER.traceOp("Admin.listPartitionReassignments({}) completed", apparentDifferentRfPartitions);
         } catch (ExecutionException e) {
-            stopOperationTimer(timerSample, metrics::listReassignmentsTimer);
+            stopOperationTimer(timerSample, metrics::listReassignmentsTimer, enableAdditionalMetrics, namespace);
             LOGGER.traceOp("Admin.listPartitionReassignments({}) failed with {}", apparentDifferentRfPartitions, e);
             return apparentlyDifferentRfTopics.stream().map(pair ->
                     pair(pair.getKey, Either.<TopicOperatorException, CurrentState>ofLeft(handleAdminException(e)))).toList();
@@ -679,11 +725,11 @@ public class BatchingTopicController {
         }
         Map<ConfigResource, Collection<AlterConfigOp>> alteredConfigs = someAlterConfigs.stream().collect(Collectors.toMap(entry -> topicConfigResource(entry.getKey().topicName()), Pair::getValue));
         LOGGER.debugOp("Admin.incrementalAlterConfigs({})", alteredConfigs);
-        Timer.Sample timerSample = startOperationTimer();
+        Timer.Sample timerSample = startOperationTimer(enableAdditionalMetrics, metrics);
         AlterConfigsResult acr = admin.incrementalAlterConfigs(alteredConfigs);
-        stopOperationTimer(timerSample, metrics::alterConfigsTimer);
+        stopOperationTimer(timerSample, metrics::alterConfigsTimer, enableAdditionalMetrics, namespace);
         acr.all().whenComplete((i, e) -> {
-            stopOperationTimer(timerSample, metrics::alterConfigsTimer);
+            stopOperationTimer(timerSample, metrics::alterConfigsTimer, enableAdditionalMetrics, namespace);
             if (e != null) {
                 LOGGER.traceOp("Admin.incrementalAlterConfigs({}) failed with {}", alteredConfigs, String.valueOf(e));
             } else {
@@ -709,10 +755,10 @@ public class BatchingTopicController {
         }
         Map<String, NewPartitions> newPartitions = someCreatePartitions.stream().collect(Collectors.toMap(pair -> pair.getKey().topicName(), Pair::getValue));
         LOGGER.debugOp("Admin.createPartitions({})", newPartitions);
-        Timer.Sample timerSample = startOperationTimer();
+        Timer.Sample timerSample = startOperationTimer(enableAdditionalMetrics, metrics);
         CreatePartitionsResult cpr = admin.createPartitions(newPartitions);
         cpr.all().whenComplete((i, e) -> {
-            stopOperationTimer(timerSample, metrics::createPartitionsTimer);
+            stopOperationTimer(timerSample, metrics::createPartitionsTimer, enableAdditionalMetrics, namespace);
             if (e != null) {
                 LOGGER.traceOp("Admin.createPartitions({}) failed with {}", newPartitions, String.valueOf(e));
             } else {
@@ -733,6 +779,23 @@ public class BatchingTopicController {
         return partitionedByError(entryStream);
     }
 
+    private PartitionedByError<ReconcilableTopic, CurrentState> findDifferentRf(PartitionedByError<ReconcilableTopic, CurrentState> currentStatesOrError) {
+        var apparentlyDifferentRf = currentStatesOrError.ok().filter(pair -> {
+            var reconcilableTopic = pair.getKey();
+            var currentState = pair.getValue();
+            // this is to trigger the replicas change status update when the user reverts an invalid replicas configuration
+            if (currentState.uniqueReplicationFactor() == reconcilableTopic.kt().getSpec().getReplicas()
+                    && reconcilableTopic.kt().getStatus() != null && reconcilableTopic.kt().getStatus().getReplicasChange() != null
+                    && reconcilableTopic.kt().getStatus().getReplicasChange().getMessage() != null) {
+                reconcilableTopic.kt().getStatus().setReplicasChange(null);
+            }
+            return reconcilableTopic.kt().getSpec().getReplicas() != null
+                && currentState.uniqueReplicationFactor() != reconcilableTopic.kt().getSpec().getReplicas();
+        }).toList();
+
+        return partitionedByError(filterByReassignmentTargetReplicas(apparentlyDifferentRf).stream());
+    }
+
     private static ConfigResource topicConfigResource(String tn) {
         return new ConfigResource(ConfigResource.Type.TOPIC, tn);
     }
@@ -749,10 +812,10 @@ public class BatchingTopicController {
         DescribeTopicsResult describeTopicsResult;
         {
             LOGGER.debugOp("Admin.describeTopics({})", tns);
-            Timer.Sample timerSample = startOperationTimer();
+            Timer.Sample timerSample = startOperationTimer(enableAdditionalMetrics, metrics);
             describeTopicsResult = admin.describeTopics(tns);
             describeTopicsResult.allTopicNames().whenComplete((i, e) -> {
-                stopOperationTimer(timerSample, metrics::describeTopicsTimer);
+                stopOperationTimer(timerSample, metrics::describeTopicsTimer, enableAdditionalMetrics, namespace);
                 if (e != null) {
                     LOGGER.traceOp("Admin.describeTopics({}) failed with {}", tns, String.valueOf(e));
                 } else {
@@ -763,10 +826,10 @@ public class BatchingTopicController {
         DescribeConfigsResult describeConfigsResult;
         {
             LOGGER.debugOp("Admin.describeConfigs({})", configResources);
-            Timer.Sample timerSample = startOperationTimer();
+            Timer.Sample timerSample = startOperationTimer(enableAdditionalMetrics, metrics);
             describeConfigsResult = admin.describeConfigs(configResources);
             describeConfigsResult.all().whenComplete((i, e) -> {
-                stopOperationTimer(timerSample, metrics::describeConfigsTimer);
+                stopOperationTimer(timerSample, metrics::describeConfigsTimer, enableAdditionalMetrics, namespace);
                 if (e != null) {
                     LOGGER.traceOp("Admin.describeConfigs({}) failed with {}", configResources, String.valueOf(e));
                 } else {
@@ -842,12 +905,11 @@ public class BatchingTopicController {
 
         Set<String> topicNames = partitionedByManaged.map(reconcilableTopic -> {
             metrics.reconciliationsCounter(namespace).increment();
-            startReconciliationTimer(reconcilableTopic);
+            startReconciliationTimer(reconcilableTopic, metrics);
             return reconcilableTopic.topicName();
         }).collect(Collectors.toSet());
 
         PartitionedByError<ReconcilableTopic, Object> deleteResult = deleteTopics(batch, topicNames);
-
 
         // join the success with not-managed: remove the finalizer and forget the topic
         deleteResult.ok().forEach(pair -> {
@@ -862,7 +924,7 @@ public class BatchingTopicController {
             }
             forgetTopic(pair.getKey());
             metrics.successfulReconciliationsCounter(namespace).increment();
-            stopReconciliationTimer(pair.getKey());
+            stopReconciliationTimer(pair.getKey(), metrics, namespace);
         });
 
         // join that to fail
@@ -885,7 +947,7 @@ public class BatchingTopicController {
             } else {
                 updateStatusForException(entry.getKey(), entry.getValue());
             }
-            stopReconciliationTimer(entry.getKey());
+            stopReconciliationTimer(entry.getKey(), metrics, namespace);
         });
 
     }
@@ -898,10 +960,10 @@ public class BatchingTopicController {
         LOGGER.debugOp("Admin.deleteTopics({})", someDeleteTopics.topicNames());
 
         // Admin delete
-        Timer.Sample timerSample = startOperationTimer();
+        Timer.Sample timerSample = startOperationTimer(enableAdditionalMetrics, metrics);
         DeleteTopicsResult dtr = admin.deleteTopics(someDeleteTopics);
         dtr.all().whenComplete((i, e) -> {
-            stopOperationTimer(timerSample, metrics::deleteTopicsTimer);
+            stopOperationTimer(timerSample, metrics::deleteTopicsTimer, enableAdditionalMetrics, namespace);
             if (e != null) {
                 LOGGER.traceOp("Admin.deleteTopics({}) failed with {}", someDeleteTopics.topicNames(), String.valueOf(e));
             } else {
@@ -993,9 +1055,21 @@ public class BatchingTopicController {
         return kt.getSpec() != null
                 && kt.getSpec().getConfig() != null;
     }
-
+    
+    private void updateStatusForSuccess(ReconcilableTopic reconcilableTopic) {
+        reconcilableTopic.kt().setStatus(
+            new KafkaTopicStatusBuilder(reconcilableTopic.kt().getStatus())
+                .withConditions(List.of(new ConditionBuilder()
+                    .withType(isPaused(reconcilableTopic.kt()) ? "ReconciliationPaused" : "Ready")
+                    .withStatus("True")
+                    .withLastTransitionTime(StatusUtils.iso8601Now())
+                    .build()))
+            .build());
+        updateStatus(reconcilableTopic);
+        metrics.successfulReconciliationsCounter(namespace).increment();
+    }
+    
     private void updateStatusForException(ReconcilableTopic reconcilableTopic, Exception e) {
-        String message = e.getMessage();
         String reason;
         if (e instanceof TopicOperatorException) {
             LOGGER.warnCr(reconcilableTopic.reconciliation(), "Reconciliation failed: {}", e.getMessage());
@@ -1004,99 +1078,93 @@ public class BatchingTopicController {
             LOGGER.errorCr(reconcilableTopic.reconciliation(), "Reconciliation failed with unexpected exception", e);
             reason = e.getClass().getSimpleName();
         }
-        Condition condition = new ConditionBuilder()
-            .withType("Ready")
-            .withStatus("False")
-            .withReason(reason)
-            .withMessage(message)
-            .withLastTransitionTime(StatusUtils.iso8601Now())
-            .build();
-        updateStatus(reconcilableTopic.reconciliation(), reconcilableTopic.kt(), condition);
+        reconcilableTopic.kt().setStatus(
+            new KafkaTopicStatusBuilder(reconcilableTopic.kt().getStatus())
+                .withConditions(List.of(new ConditionBuilder()
+                    .withType("Ready")
+                    .withStatus("False")
+                    .withReason(reason)
+                    .withMessage(e.getMessage())
+                    .withLastTransitionTime(StatusUtils.iso8601Now())
+                    .build()))
+                .build());
+        updateStatus(reconcilableTopic);
         metrics.failedReconciliationsCounter(namespace).increment();
     }
 
-    private void updateStatusOk(ReconcilableTopic reconcilableTopic) {
-        Condition condition = new ConditionBuilder()
-            .withType(isPaused(reconcilableTopic.kt()) ? "ReconciliationPaused" : "Ready")
-            .withStatus("True")
-            .withLastTransitionTime(StatusUtils.iso8601Now())
-            .build();
-        updateStatus(reconcilableTopic.reconciliation(), reconcilableTopic.kt(), condition);
-        metrics.successfulReconciliationsCounter(namespace).increment();
-    }
-
-    private void updateStatus(Reconciliation reconciliation,
-                              KafkaTopic kt,
-                              Condition condition) {
-        var oldStatus = kt.getStatus();
-        Condition oldReadyCondition = oldStatus == null || oldStatus.getConditions() == null ?
-            null : oldStatus.getConditions().stream().findFirst().orElse(null);
-        if (oldStatus == null
-                || (!isPaused(kt) && oldStatus.getObservedGeneration() != kt.getMetadata().getGeneration())
-                || oldStatus.getTopicName() == null
-                || oldReadyCondition == null
-                || isDifferentCondition(oldReadyCondition, condition)) {
-            // the observedGeneration is initialized to 0 when creating a paused user (oldStatus null, paused true)
+    private void updateStatus(ReconcilableTopic reconcilableTopic) {
+        var oldStatus = Crds.topicOperation(kubeClient)
+            .inNamespace(reconcilableTopic.kt().getMetadata().getNamespace())
+            .withName(reconcilableTopic.kt().getMetadata().getName()).get().getStatus();
+        if (statusChanged(reconcilableTopic.kt(), oldStatus)) {
+            // the observedGeneration is initialized to 0 when creating a paused topic (oldStatus null, paused true)
             // this will result in metadata.generation: 1 > status.observedGeneration: 0 (not reconciled)
-            long observedGeneration = oldStatus != null
-                ? !isPaused(kt) ? kt.getMetadata().getGeneration() : oldStatus.getObservedGeneration()
-                : !isPaused(kt) ? kt.getMetadata().getGeneration() : 0L;
-            String newTopicName = !isManaged(kt) ? null
-                    : oldStatus != null && oldStatus.getTopicName() != null ? oldStatus.getTopicName()
-                    : topicName(kt);
-            var updatedTopic = new KafkaTopicBuilder(kt)
-                    .editOrNewMetadata()
-                        .withResourceVersion(null)
-                    .endMetadata()
-                    .editOrNewStatus()
-                        .withObservedGeneration(observedGeneration)
-                        .withTopicName(newTopicName)
-                        .withConditions(condition)
-                    .endStatus().build();
-            LOGGER.debugCr(reconciliation, "Updating status");
-            Timer.Sample timerSample = startOperationTimer();
-            var got = Crds.topicOperation(kubeClient)
-                    .resource(updatedTopic)
-                    .updateStatus();
-            stopOperationTimer(timerSample, metrics::updateStatusTimer);
-            LOGGER.debugCr(reconciliation, "Updated status to observedGeneration {}, resourceVersion {}",
+            reconcilableTopic.kt().getStatus().setObservedGeneration(reconcilableTopic.kt().getStatus() != null && oldStatus != null
+                ? !isPaused(reconcilableTopic.kt()) ? reconcilableTopic.kt().getMetadata().getGeneration() : oldStatus.getObservedGeneration()
+                : !isPaused(reconcilableTopic.kt()) ? reconcilableTopic.kt().getMetadata().getGeneration() : 0L);
+            reconcilableTopic.kt().getStatus().setTopicName(!isManaged(reconcilableTopic.kt()) ? null
+                : oldStatus != null && oldStatus.getTopicName() != null ? oldStatus.getTopicName()
+                : topicName(reconcilableTopic.kt()));
+            var updatedTopic = new KafkaTopicBuilder(reconcilableTopic.kt())
+                .editOrNewMetadata()
+                .withResourceVersion(null)
+                .endMetadata()
+                .withStatus(reconcilableTopic.kt().getStatus())
+                .build();
+            LOGGER.debugCr(reconcilableTopic.reconciliation(), "Updating status with {}", updatedTopic.getStatus());
+            Timer.Sample timerSample = startOperationTimer(enableAdditionalMetrics, metrics);
+            try {
+                var got = Crds.topicOperation(kubeClient).resource(updatedTopic).updateStatus();
+                stopOperationTimer(timerSample, metrics::updateStatusTimer, enableAdditionalMetrics, namespace);
+                LOGGER.traceCr(reconcilableTopic.reconciliation(), "Updated status to observedGeneration {}, resourceVersion {}",
                     got.getStatus().getObservedGeneration(), got.getMetadata().getResourceVersion());
+            } catch (Throwable e) {
+                LOGGER.errorOp("Status update failed: {}", e.getMessage());
+            }
+        }
+    }
+
+    private boolean statusChanged(KafkaTopic kt, KafkaTopicStatus oldStatus) {
+        return oldStatusOrTopicNameMissing(oldStatus)
+            || nonPausedAndDifferentGenerations(kt, oldStatus)
+            || differentConditions(kt.getStatus().getConditions(), oldStatus.getConditions())
+            || differentReplicasChange(kt, oldStatus);
+    }
+
+    private boolean oldStatusOrTopicNameMissing(KafkaTopicStatus oldStatus) {
+        return oldStatus == null || oldStatus.getTopicName() == null;
+    }
+
+    private boolean nonPausedAndDifferentGenerations(KafkaTopic kt, KafkaTopicStatus oldStatus) {
+        return !isPaused(kt) && oldStatus.getObservedGeneration() != kt.getMetadata().getGeneration();
+    }
+    
+    private boolean differentConditions(List<Condition> newConditions, List<Condition> oldConditions) {
+        if (Objects.equals(newConditions, oldConditions)) {
+            return false;
+        } else if (newConditions == null || oldConditions == null || newConditions.size() != oldConditions.size()) {
+            return true;
         } else {
-            LOGGER.debugCr(reconciliation, "Unchanged status");
+            for (int i = 0; i < newConditions.size(); i++) {
+                if (differentCondition(newConditions.get(i), oldConditions.get(i))) {
+                    return true;
+                }
+            }
         }
+        return false;
     }
 
-    private static boolean isDifferentCondition(Condition oldReadyCondition,
-                                                Condition condition) {
-        return !Objects.equals(oldReadyCondition.getType(), condition.getType())
-                || !Objects.equals(oldReadyCondition.getStatus(), condition.getStatus())
-                || !Objects.equals(oldReadyCondition.getReason(), condition.getReason())
-                || !Objects.equals(oldReadyCondition.getMessage(), condition.getMessage());
+    private boolean differentCondition(Condition newCondition, Condition oldCondition) {
+        return !Objects.equals(newCondition.getType(), oldCondition.getType())
+            || !Objects.equals(newCondition.getStatus(), oldCondition.getStatus())
+            || !Objects.equals(newCondition.getReason(), oldCondition.getReason())
+            || !Objects.equals(newCondition.getMessage(), oldCondition.getMessage());
     }
 
-    private void startReconciliationTimer(ReconcilableTopic topic) {
-        if (topic.reconciliationTimerSample() == null) {
-            topic.reconciliationTimerSample(Timer.start(metrics.metricsProvider().meterRegistry()));
-        }
-    }
-
-    private void stopReconciliationTimer(ReconcilableTopic topic) {
-        if (topic.reconciliationTimerSample() != null) {
-            topic.reconciliationTimerSample().stop(metrics.reconciliationsTimer(namespace));
-        }
-    }
-
-    private Timer.Sample startOperationTimer() {
-        if (enableAdditionalMetrics) {
-            return Timer.start(metrics.metricsProvider().meterRegistry());
-        } else {
-            return null;
-        }
-    }
-
-    private void stopOperationTimer(Timer.Sample sample, Function<String, Timer> addMetric) {
-        if (sample != null && enableAdditionalMetrics) {
-            sample.stop(addMetric.apply(namespace));
-        }
+    private boolean differentReplicasChange(KafkaTopic kt, KafkaTopicStatus oldStatus) {
+        return kt.getStatus().getReplicasChange() == null && oldStatus.getReplicasChange() != null
+            || kt.getStatus().getReplicasChange() != null && oldStatus.getReplicasChange() == null
+            || (kt.getStatus().getReplicasChange() != null && oldStatus.getReplicasChange() != null 
+                && !Objects.equals(kt.getStatus().getReplicasChange(), oldStatus.getReplicasChange()));
     }
 }
